# jreen

./: .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README  README.md  jreen.pro  jreen.qbp  jreen.qbs
bot/: bot.cpp  bot.h  bot.pro  main.cpp
cmake/: FindGSASL.cmake  FindQCA2.cmake  jreenMacros.cmake
deffered/gui/: jidedit_p.h  xmlconsole.cpp  xmlconsole.h  xmlconsole.ui
qbs/imports/probes/: FrameworkProbe.qbs  LibraryProbe.qbs  PathProbe.qbs  PkgConfigProbe.qbs
qbs/modules/: CommonModule.qbs
qbs/modules/aspell/: aspell.qbs
qbs/modules/hunspell/: hunspell.qbs
qbs/modules/idn/: idn.qbs
qbs/modules/kde/: KdeModule.qbs  Utils.js
qbs/modules/kde/io/: io.qbs
qbs/modules/kde/notifyconfig/: notifyconfig.qbs
qbs/modules/kde/utils/: utils.qbs
qbs/modules/otr/: otr.qbs
qbs/modules/qca/: qca.qbs
qbs/modules/speex/: speex.qbs
qbs/modules/windows/: WinapiModule.qbs
qbs/modules/windows/advapi32/: advapi32.qbs
qbs/modules/windows/ws2_32/: ws2_32.qbs
qbs/modules/zlib/: zlib.qbs
src/: abstractroster.cpp  abstractroster.h  abstractroster_p.h  action.cpp  action.h  action_p.h  activity.cpp  activity.h  activityfactory.cpp  activityfactory_p.h  attention.cpp  attention.h  attentionfactory.cpp  attentionfactory_p.h  bindfeature.cpp  bindfeature.h  bindfeature_p.h  bitsofbinary.cpp  bitsofbinary.h  bitsofbinaryfactory.cpp  bitsofbinaryfactory_p.h  bookmark.cpp  bookmark.h  bookmarkfactory.cpp  bookmarkfactory.h  bookmarkfactory_p.h  bookmarkstorage.cpp  bookmarkstorage.h  buffereddatastream.cpp  buffereddatastream.h  capabilities.cpp  capabilities.h  capabilitiesfactory.cpp  capabilitiesfactory_p.h  captcha.cpp  captcha.h  captchafactory.cpp  captchafactory_p.h  chatstate.cpp  chatstate.h  (+247 more)
src/experimental/: iristransport.cpp  iristransport.h  jingle.cpp  jingle_p.h  jingleaudiocontent.cpp  jingleaudiocontent.h  jingleaudiocontent_p.h  jingleaudiocontentfactory.cpp  jingleaudiocontentfactory_p.h  jingleaudiopayload.cpp  jingleaudiopayload.h  jingleaudiopayload_p.h  jinglecontent.cpp  jinglecontent.h  jinglecontent_p.h  jinglefactory.cpp  jinglefactory_p.h  jinglemanager.cpp  jinglemanager.h  jinglemanager_p.h  jinglesession.cpp  jinglesession.h  jinglesession_p.h  jinglespeexcodec.cpp  jinglespeexcodec_p.h  jingletransport.cpp  jingletransport.h  jingletransportice.cpp  jingletransportice_p.h
src/gui/: gui.pri  jidedit.cpp  jidedit.h  jidedit_p.h  xmlconsole.cpp  xmlconsole.h
strange/: imagemessage.cpp  imagemessage.h  imagemessagefactory.cpp  imagemessagefactory_p.h
